[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "superwand"
version = "0.1.8"
description = "A tool for retheming images and CSS using color palettes and gradients."
readme = "README.md"
requires-python = ">=3.8"
license = "MIT"
authors = [
    {name = "Julian Henry"}
]
classifiers = [
    "Programming Language :: Python :: 3",
    "Operating System :: OS Independent",
]
dependencies = [
    "numpy",
    "pillow",
    "scipy",
    "matplotlib",
    "scikit-learn",
    "flask",
    "werkzeug",
]

[project.urls]
Homepage = "https://github.com/juleshenry/superwand"
"Bug Tracker" = "https://github.com/juleshenry/superwand/issues"

[project.optional-dependencies]
test = ["pytest", "pytest-cov"]

[tool.setuptools.package-data]
superwand = ["assets/fonts/*.ttf", "assets/themes_jpgs/*.jpg", "studio/templates/*.html", "studio/static/**/*"]

[project.scripts]
superwand = "superwand.core.superwand:main"
gradient-enforce = "superwand.utils.gradient_enforce:main"

[tool.setuptools.packages.find]
where = ["src"]
